app/kargo-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kargo-demo
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kargo-demo
  template:
    metadata:
      labels:
        app: kargo-demo
    spec:
      containers:
      - image: nginx:1.25.4
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: content
          readOnly: true
      volumes:
      - configMap:
          name: kargo-demo-content
        name: content
