app/kargo-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kargo-demo
  namespace: staging
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: kargo-demo
  type: ClusterIP
