app/kargo-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kargo-demo
spec:
  ingressClassName: traefik
  rules:
  - host: kargo-demo.production.quotech.company
    http:
      paths:
      - backend:
          service:
            name: kargo-demo
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kargo-demo.production.quotech.company
